--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minji</title>
+    <link rel="stylesheet" href=style.css>
 </head>
 <body>
-    
+ <a href="https://www.youtube.com/watch?v=DgEuHOhDf04"> COVER DA MINJI</a>
+ <a href="https://www.youtube.com/watch?v=Rrf8uQFvICE"> HYPE BOY MINJI VERSÃO </a>
+ <a href="https://www.youtube.com/watch?v=yAtJkMicb58"> MINJI EM SUPER SHY</a>
 </body>
 </html>
