--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
  <a href="https://www.youtube.com/watch?v=DgEuHOhDf04"> COVER DA MINJI</a>
  <a href="https://www.youtube.com/watch?v=Rrf8uQFvICE"> HYPE BOY MINJI VERSÃO </a>
  <a href="https://www.youtube.com/watch?v=yAtJkMicb58"> MINJI EM SUPER SHY</a>
+<h1> Quem é Minji?</h1>
+<p> Minji é uma das integrantes do grupo de kpop sul-coreano "Newjeans"que debutpou  emagosto fe 2022. Ela nasceu em 7 de maio de 2004 e é conhecida por suas habilidades vocais e seu carisma no palco. Minji também se destaca por seu estilo e presença, minji com sua personalidade encantadora e talento, é uma das integrantes que cativa os fãs.</p>
+<h2> Eras memoravéis de Kim Minji</h2>
+<ul>
+<li> Attention</li>
+<li>Hype Boy</li>
+<li>Get Up</li>
+</ul>
+<img class="img1 scr =" ""
 </body>
 </html>
