--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li>Hype Boy</li>
 <li>Get Up</li>
 </ul>
-<img class="img1 scr ="
+<img class="img1 scr ="20230905_Minji_(NewJeans).jpg>
+<img class="img1 scr =">
 </body>
 </html>
