--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <li>Get Up</li>
 </ul>
 <img class="img1 scr ="20230905_Minji_(NewJeans).jpg>
-<img class="img1 scr =">
+<img class="img1 scr ="newjeans-minji-how-sweet-capa_widelg.jpg>
 </body>
 </html>
