Atualizar o index.html
.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <li>Hype Boy</li>
 <li>Get Up</li>
 </ul>
-<img class= img1 scr="20230905_Minji_(NewJeans).jpg">
-<img class= img2 scr ="newjeans-minji-how-sweet-capa_widelg.jpg">
+<img class= img1 src ="20230905_Minji_(NewJeans).jpg">
+<img class= img2 src ="newjeans-minji-how-sweet-capa_widelg.jpg">
 </body>
 </body>
 </html>
